# klogic_of_ocanren

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .ocamlformat  README.md  dune  dune-project  kotlin_of_ocanren.opam  oleg_numbers.ml  test_numbers.ml
JGS/: Closure.ml  JGS.ml  JGS_Helpers.ml  MutableTypeTable.ml  RelationalClosureTests.ml  dune  miniJGS.ml  relationalClosureTests.t
Tast_pattern/: MyPrinttyped.ml  Tast_folder.ml  Tast_pattern.ml  Tast_pattern.mli  dune  tast_pattern_test.ml
demo_scheme/: OlegNumbers.scm  default_quines.scm  dune  oleg.t  scheme_interpret.scm  scheme_interpret.t  term_functions.scm  term_functions_test.t  test_default_interpreter.scm  test_interpret.scm  test_oleg.scm  test_syn_interpreter.rkt
demo_scheme/bench/: .gitignore  Makefile  bench_scheme.scm  numero_bench.rkt  quines_bench.rkt
fresh/: dune  ppx_fresh.ml
klogic/: asdf.kt  asdf.t  build.gradle.kts  dune  settings.gradle.kts
klogic/gradle/wrapper/: gradle-wrapper.properties
klogic/src/main/kotlin/: TypeSolver.kt
klogic/src/main/kotlin/org/jgs/classtable/: ClassesExtractorTask.kt
klogic/src/test/kotlin/: AppendoTest.kt  JGSBackward.kt  JGSForward.kt  JGSMiniStd.kt  JGSTest.kt  JGSstandard.kt  OlegNumbersTest.kt  PermutationsTest.kt  ReversoTest.kt  TestRunner.kt
klogic/src/test/kotlin/org/jgs/classtable/: ClassesTableVisitor.kt
klogic/src/test/kotlin/utils/: Closure.kt  JGS.kt  JGSTypes.kt  JGS_Helpers.kt  JtypePretty.kt  LogicInt.kt  OlegLogicNumbers.kt  OlegNumbers.kt  Option.kt  PeanoNumbers.kt  Utils.kt  asdf.kt  dune  miniJGS.kt
ocaml/: 1.rkt  FCPM.ml  counters.ml  dune  scheme_ast.ml  scheme_interpret.ml  scheme_tests.ml
ocaml/bench/: dune
