(library
 (name JGS)
 (modules JGS)
 (libraries OCanren noCanren.Option noCanren.List)
 (wrapped false)
 (flags
  (:standard
   -rectypes
   ;-dsource
   ))
 (preprocess
  (pps
   OCanren-ppx.ppx_wildcard
   OCanren-ppx.ppx_distrib
   -new-typenames
   ppx_hack
   GT.ppx_all)))

(library
 (name test_JGS)
 (modules test_JGS)
 (libraries JGS)
 (flags
  (:standard -rectypes))
 (inline_tests)
 (preprocess
  (pps ppx_hack ppx_expect ppx_inline_test)))
