(rule
 (deps
  %{project_root}/bin/klogic_of_ocanren.exe
  %{cmo:../oleg_numbers}
  ;
  )
 (target OlegNumbers.scm)
 (mode promote)
 (action
  (run
   %{project_root}/bin/klogic_of_ocanren.exe
   ../.oleg_numbers.objs/byte/oleg_numbers.cmt
   -scheme
   -o
   %{target})))

(cram
 (deps
  ./OlegNumbers.scm
  %{project_root}/faster-miniKanren/mk.scm
  ;
  ))

;(copy %{project_root}/faster-miniKanren/mk.scm .)

; (cram
;  (deps
;   ;   %{project_root}/faster-miniKanren/mk.scm
;   ../../faster-miniKanren/mk.scm
;   ;
;   ))

(cram
 (deps
  ;%{project_root}/faster-miniKanren/private-unstable.rkt
  ;   ../faster-miniKanren/private-unstable.rkt
  ;%{project_root}/faster-minikanren/mk.scm
  ;
  ))
