(rule
 (deps
  %{project_root}/bin/klogic_of_ocanren.exe
  ../../../../../.oleg_numbers.objs/byte/oleg_numbers.cmo
  ;
  )
 (target OlegNumbers.kt)
 (mode promote)
 (action
  (run
   %{project_root}/bin/klogic_of_ocanren.exe
   ../../../../../.oleg_numbers.objs/byte/oleg_numbers.cmt
   -o
   %{target})))

(rule
 (deps
  %{project_root}/bin/klogic_of_ocanren.exe
  ../../../../../JGS/.JGS.objs/byte/jGS.cmo
  ;
  )
 (target JGS.kt)
 (mode promote)
 (action
  (run
   %{project_root}/bin/klogic_of_ocanren.exe
   ../../../../../JGS/.JGS.objs/byte/jGS.cmt
   -o
   %{target})))

(rule
 (deps
  %{project_root}/bin/klogic_of_ocanren.exe
  ../../../../../JGS/.miniJGS.objs/byte/miniJGS.cmo
  ;
  )
 (target miniJGS.kt)
 (mode promote)
 (action
  (run
   %{project_root}/bin/klogic_of_ocanren.exe
   ../../../../../JGS/.miniJGS.objs/byte/miniJGS.cmt
   -o
   %{target})))

(cram
 (deps OlegNumbers.kt JGS.kt miniJGS.kt))
