(rule
 (deps
  %{project_root}/bin/klogic_of_ocanren.exe
  ../../../../../.oleg_numbers.objs/byte/oleg_numbers.cmo
  ;
  )
 (target OlegNumbers.kt)
 (mode promote)
 (action
  (run
   %{project_root}/bin/klogic_of_ocanren.exe
   ../../../../../.oleg_numbers.objs/byte/oleg_numbers.cmt
   -o
   %{target})))

(rule
 (deps
  %{project_root}/bin/klogic_of_ocanren.exe
  ../../../../../JGS/.JGS.objs/byte/jGS.cmo
  ;
  )
 (target JGS.kt)
 (mode promote)
 (action
  (run
   %{project_root}/bin/klogic_of_ocanren.exe
   ../../../../../JGS/.JGS.objs/byte/jGS.cmt
   -o
   %{target})))

(rule
 (deps
  %{project_root}/bin/klogic_of_ocanren.exe
  ../../../../../JGS/.JGS.objs/byte/closure.cmo
  ;
  )
 (target Closure.kt)
 (mode promote)
 (action
  (run
   %{project_root}/bin/klogic_of_ocanren.exe
   ../../../../../JGS/.JGS.objs/byte/closure.cmt
   -o
   %{target})))

(rule
 (deps
  %{project_root}/bin/klogic_of_ocanren.exe
  ../../../../../JGS/.JGS.objs/byte/jGS_Helpers.cmo
  ;
  )
 (target JGS_Helpers.kt)
 (mode promote)
 (action
  (run
   %{project_root}/bin/klogic_of_ocanren.exe
   ../../../../../JGS/.JGS.objs/byte/jGS_Helpers.cmt
   -o
   %{target})))

(cram
 (deps OlegNumbers.kt JGS.kt))
