(rule
 (deps
  %{project_root}/bin/klogic_of_ocanren.exe
  %{cmo:../../../../../oleg_numbers}
  ;
  )
 (target OlegNumbers.kt)
 (mode promote)
 (action
  (run
   %{project_root}/bin/klogic_of_ocanren.exe
   ../../../../../.oleg_numbers.objs/byte/oleg_numbers.cmt
   -o
   %{target})))

(rule
 (deps
  %{project_root}/bin/klogic_of_ocanren.exe
  %{cmo:../../../../../JGS/JGS}
  ;
  )
 (target JGS.kt)
 (mode promote)
 (action
  (run
   %{project_root}/bin/klogic_of_ocanren.exe
   ../../../../../JGS/.JGS.objs/byte/jGS.cmt
   -o
   %{target})))

(rule
 (deps
  %{project_root}/bin/klogic_of_ocanren.exe
  %{cmo:../../../../../JGS/closure}
  ;
  )
 (target Closure.kt)
 (mode promote)
 (action
  (run
   %{project_root}/bin/klogic_of_ocanren.exe
   ../../../../../JGS/.JGS.objs/byte/closure.cmt
   -o
   %{target})))

(rule
 (deps
  %{project_root}/bin/klogic_of_ocanren.exe
  %{cmo:../../../../../JGS/jGS_Helpers}
  ;
  )
 (target JGS_Helpers.kt)
 (mode promote)
 (action
  (run
   %{project_root}/bin/klogic_of_ocanren.exe
   ../../../../../JGS/.JGS.objs/byte/jGS_Helpers.cmt
   -o
   %{target})))

(cram
 (deps OlegNumbers.kt JGS.kt))
